<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_camera">

    <fragment
        android:id="@+id/navigation_plastic_code"
        android:name="com.example.waste_disposal_classification.ui.plasticcode.PlasticCodeFragment"
        android:label="@string/title_code"
        tools:layout="@layout/fragment_plastic_code" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.waste_disposal_classification.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.waste_disposal_classification.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />
</navigation>