<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraFragment">

    <ImageView
        android:id="@+id/camera_capture"
        android:layout_width="0dp"
        android:layout_height="191dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/description_camera_capture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/recycle" />

    <Button
        android:id="@+id/btn_capture_image"
        android:layout_width="149dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_capture_image_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_capture" />

    <Button
        android:id="@+id/btn_upload_image"
        android:layout_width="149dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btn_upload_image_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_capture" />

    <ListView
        android:id="@+id/listview_prediction"
        android:layout_width="362dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_capture_image"
        app:layout_constraintVertical_bias="0.073" />

    <ImageView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="191dp"
        android:layout_marginTop="384dp"
        android:contentDescription="@string/description_camera_capture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>